some new things

--- a/WebGame.Tests/WebGame.Tests.csproj
+++ b/WebGame.Tests/WebGame.Tests.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MechanicsTest.cs" />
+    <Compile Include="MongoDbTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
