--- a/WebGame.Tests/app.config
+++ b/WebGame.Tests/app.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <appSettings>
+    <add key="mongoDbConnectionString" value="mongodb://suleinvo:qwerty1@ds057568.mongolab.com:57568/servergamedatabase" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
