--- a/WebGame/packages.config
+++ b/WebGame/packages.config
@@ -7,6 +7,10 @@
   <package id="Microsoft.AspNet.Mvc.ru" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor.ru" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.0.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.0.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.0.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
@@ -17,7 +21,11 @@
   <package id="Microsoft.AspNet.WebApi.WebHost.ru" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.ru" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
