--- a/WebGame/Web.config
+++ b/WebGame/Web.config
@@ -10,7 +10,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="mongoDbConnectionString" value="mongodb://test:test@ds057568.mongolab.com:57568/servergamedatabase" />
+    <add key="mongoDbConnectionString" value="mongodb://suleinvo:qwerty1@ds057568.mongolab.com:57568/servergamedatabase" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
