--- a/WebGame/packages.config
+++ b/WebGame/packages.config
@@ -9,7 +9,9 @@
   <package id="Microsoft.AspNet.Razor.ru" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.0.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core.ru" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.0.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.ru" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.0.0" targetFramework="net45" />
@@ -23,7 +25,10 @@
   <package id="Microsoft.AspNet.WebPages.ru" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb.ru" version="2.0.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.ru" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security.ru" version="2.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
